<resources>
    <string name="app_name">Play2learn</string>
    <string name="MyProfile">My Profile</string>
    <string name="Settings">Settings</string>
    <string name="MyGroup">My Group</string>
    <string name="Logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Share1">Link to PlayStore:</string>
    <string name="Share2">Share using:</string>
    <string name="BaseActivity">Play2learn</string>
    <string name="MainActivity">Play2learn - Login</string>
    <string name="RegisterActivity">Play2learn - Register</string>
    <string name="SubjectsActivity">Play2learn - Subjects</string>
    <string name="GameActivity">Play2learn - Game</string>
    <string name="ResultsActivity">Play2learn - Results</string>
    <string name="GameFragment">Play2learn - Game</string>
    <string name="ProfileFragment">Play2learn - Profile</string>
    <string name="SettingsFragment">Play2learn - Settings</string>
    <string name="MyGroupFragment">Play2learn - My group</string>
    <string name="LogoutFragment">Play2learn - Logout</string>
    <string name="ReallyBright">I\'m really bright.</string>
    <string name="LoginButton">LOGIN</string>
    <string name="RegisterButton">REGISTER</string>
    <string name="AccountRegister">Doesn\'t have an account?</string>
    <string name="AccountLogin">Already have an account?</string>
    <string name="RegisterLink">Register</string>
    <string name="LoginLink">Login</string>
    <string name="UsernameEmail">Username / Email</string>
    <string name="Username">Username</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="PLAY">PLAY</string>
    <string name="GameDescription">The game that will make you master any subject.</string>
    <string name="Name">Name</string>
    <string name="Biography">Biography</string>
    <string name="Save">SAVE</string>
    <string name="AppLanguage">App Language</string>
    <string name="ClickToChoose">Click to choose</string>
    <string name="MyGroupTitle">My group</string>
    <string name="LongClickDelete">Long click to delete a member.</string>
    <string name="NewMember">New member</string>
    <string name="AvailableSubjects">Available subjects:</string>
    <string name="Submit">SUBMIT</string>
    <string name="NextQuestion">NEXT QUESTION</string>
    <string name="YourScore">Your score:</string>
    <string name="CorrectAnswers">Correct answers:</string>
    <string name="CorrectAnswers2">Correct answers</string>
    <string name="WrongAnswers">Wrong answers</string>
    <string name="CompareWith">Compare with:</string>
    <string name="PlayAgain">PLAY AGAIN</string>
    <string name="difEasy">Easy</string>
    <string name="difMedium">Medium</string>
    <string name="difHard">Hard</string>
    <string name="question">question</string>
    <string name="wrong">Wrong answer!</string>
    <string name="minimizeApp">You are not allowed to minimize the app while answering a question!</string>
    <string name="right">Right answer!</string>
    <string name="YES">YES!</string>
    <string name="NO">NO!</string>
    <string name="GoHome1">Are you sure?</string>
    <string name="GoHome2">Do you want end the current game and go back to the main page?</string>
    <string name="TimeToSubmit">Time to submit:</string>
    <string name="VerifyAnswers">Make sure you checked one and only one answer.</string>
    <string name="FinishGame">FINISH GAME</string>
    <string name="InternetConnection">Please check your internet connection</string>
    <string name="Points"> Points!</string>
    <string name="CorrectAnswer">Correct answers: </string>
    <string name="Exceptions">Exceptions</string>
    <string name="AllFieldsRequired">All Fields are required</string>
    <string name="LoginSuccessfull">User logged in successfull</string>
    <string name="UserNotExist">User does not exist</string>
    <string name="SpecFriendName">You need to specify your friend\'s name</string>
    <string name="UserinFriendGroup">This user is already in the friend\'s group</string>
    <string name="AddedSuccess">has been successfully added</string>
    <string name="Alert">Alert!</string>
    <string name="Eliminate">Do you really want to delete?</string>
    <string name="UserUsed">User name already used</string>
    <string name="RegisterSuccessfull">User registered successfull</string>
    <string name="SelectTheme">Select a theme before you play</string>
    <string name="UpdateSuccessfull">Update successfull</string>
    <string name="EmailPassIncorrect">Email or password are incorrect</string>
    <string name="MyLastTest">My Last Test</string>
    <string name="TimeToSolve">Time to solve (s)</string>
    <string name="FinalScore">Final score</string>
    <string name="Update">UPDATE</string>
    <string name="DelUser">DELETE USER</string>
    <string-array name="friendsResult">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
        <item>Five</item>
    </string-array>
</resources>