<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/grp1"
        android:checkableBehavior="single">
        <item android:id="@+id/nav_game"
            android:icon="@drawable/game_icon"
            android:title="@string/app_name"/>
    </group>

    <group android:id="@+id/grp2"
        android:checkableBehavior="single">
        <item android:id="@+id/nav_profile"
            android:icon="@drawable/person_icon"
            android:title="@string/MyProfile"/>
    </group>

    <group android:id="@+id/grp3"
        android:checkableBehavior="single">
        <item android:id="@+id/nav_settings"
            android:icon="@drawable/settings_icon"
            android:title="@string/Settings"/>
    </group>

    <group android:id="@+id/grp4"
        android:checkableBehavior="single">
        <item android:id="@+id/nav_mygroup"
            android:icon="@drawable/group_icon"
            android:title="@string/MyGroup"/>
    </group>

    <group android:id="@+id/grp5"
        android:checkableBehavior="single">
        <item android:id="@+id/nav_logout"
            android:icon="@drawable/logout_icon"
            android:title="@string/Logout"/>
    </group>
</menu>