<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <include
        android:id="@+id/include_toolbar"
        layout="@layout/tool_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/brainImage"
        android:layout_width="169dp"
        android:layout_height="173dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/brain"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:fontFamily="@font/roboto_black"
        android:textSize="32dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/brainImage" />

    <TextView
        android:id="@+id/reallyBright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/ReallyBright"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
        android:id="@+id/LoginEdTextUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/Username"
        android:background="@drawable/edittext_border"
        app:layout_constraintTop_toBottomOf="@+id/reallyBright">
    </EditText>

    <EditText
        android:id="@+id/LoginEdTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/Email"
        android:background="@drawable/edittext_border"
        app:layout_constraintTop_toBottomOf="@+id/LoginEdTextUserName">
    </EditText>

    <EditText
        android:id="@+id/LoginEdTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:background="@drawable/edittext_border"
        app:layout_constraintTop_toBottomOf="@+id/LoginEdTextEmail">
    </EditText>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/BtnRegist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:textSize="17dp"
        android:text="@string/RegisterButton"
        android:textColor="@color/white"
        android:background="@drawable/rounded_corners_black_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginEdTextPassword"
        android:onClick="Register"/>

    <TextView
        android:id="@+id/account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/AccountLogin"
        android:textAlignment="center"
        android:textSize="15dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/BtnRegist" />

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/LoginLink"
        android:textAlignment="center"
        android:textSize="15dp"
        android:fontFamily="@font/roboto_black"
        android:textColor="@color/blue_link"
        app:layout_constraintTop_toBottomOf="@+id/account"
        android:onClick="GoToLoginPage"/>

</androidx.constraintlayout.widget.ConstraintLayout>