<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BaseActivity">

    <ImageView
        android:id="@+id/EmailIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/email_icon"
        android:layout_marginTop="10dp"
        android:layout_marginStart="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Email"
        app:layout_constraintTop_toBottomOf="@+id/Email">
    </ImageView>

    <EditText
        android:id="@+id/edTextEmail"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@+id/EmailIcon"
        app:layout_constraintTop_toBottomOf="@+id/Email">
    </EditText>

    <TextView
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_black"
        app:layout_constraintStart_toEndOf="@+id/EmailIcon"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <ImageView
        android:id="@+id/keyIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="60dp"
        android:background="@drawable/key_icon"
        app:layout_constraintEnd_toStartOf="@+id/Email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password"></ImageView>

    <EditText
        android:id="@+id/edTextPass"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@+id/keyIcon"
        app:layout_constraintTop_toBottomOf="@+id/Password">
    </EditText>

    <TextView
        android:id="@+id/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Password"
        android:layout_marginTop="35dp"
        android:layout_marginStart="20dp"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_black"
        app:layout_constraintStart_toEndOf="@+id/EmailIcon"
        app:layout_constraintTop_toBottomOf="@+id/edTextEmail">
    </TextView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/BtnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:textSize="17dp"
        android:text="@string/Save"
        android:textColor="@color/white"
        android:background="@drawable/rounded_corners_black_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edTextPass"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/BtnDelUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:textSize="17dp"
        android:text="Delete User"
        android:textColor="@color/black"
        android:background="@drawable/rounded_coners_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BtnSave"/>

    <View
        android:id="@+id/horizontal_line1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="40dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/BtnDelUser" />

    <TextView
        android:id="@+id/appLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/AppLanguage"
        android:textAlignment="center"
        android:fontFamily="@font/roboto_black"
        android:textColor="@color/black"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_line1">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ClickToChoose"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appLanguage">
    </TextView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/changePT"
        android:layout_width="130dp"
        android:layout_height="70dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="48dp"
        android:layout_weight="1"
        android:background="@drawable/pt"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/takeLook" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/changeENG"
        android:layout_width="130dp"
        android:layout_height="70dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="48dp"
        android:layout_weight="1"
        android:background="@drawable/en"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.254"
        app:layout_constraintStart_toEndOf="@+id/changePT"
        app:layout_constraintTop_toBottomOf="@+id/takeLook" />

</androidx.constraintlayout.widget.ConstraintLayout>